--- a/published/005-2016-Feb-1.md
+++ b/published/005-2016-Feb-1.md
@@ -39,6 +39,7 @@ Across the entire IPFS GitHub organization, the following people have committed 
 - [@anarcat](//github.com/anarcat) (anarcat)
 - [@Ape](//github.com/Ape) (Lauri Niskanen)
 - [@area](//github.com/area)
+- [@ARezaK](//github.com/ARezaK)
 - [@BigBlueHat](//github.com/BigBlueHat) (BigBlueHat)
 - [@boxxa](//github.com/boxxa) (Boxxa)
 - [@briantigerchow](//github.com/briantigerchow) (Brian Tiger Chow)
